# cognizantaimlapril2026

./: README.md
day2/: pyproject.toml
day2/docs/source/: conf.py  index.rst
day2/src/: app.py  start.py
day2/src/models/: customer.py
day2/src/store/: customerstore.py
day2/src/view/: customerview.py
day3/: pyproject.toml  reports.html
day3/conf/: logger_conf.py
day3/src/Healthcare.egg-info/: PKG-INFO  SOURCES.txt
day3/src/exceptions/: appoinment_not_found_exception.py  doctor_not_found_exception.py  patient_not_found_exception.py
day3/src/models/: appoinment.py  doctor.py  patient.py  person.py  role.py  staff.py
day3/src/stores/: appoinmentstore.py  doctorstore.py  patientstore.py
day3/src/utils/: app.py  main.py
day3/tests/: doctors.csv  patient.csv
day3/tests/contract_testing/: test_doctor.py  test_doctor_store.py  test_patient.py
day3_bankingsystem/: pyproject.toml  report.html
day3_bankingsystem/banking_system.egg-info/: SOURCES.txt  top_level.txt
day3_bankingsystem/day3_bankingsystemenv/: pyvenv.cfg
day3_bankingsystem/src/: app.py
day3_bankingsystem/src/banking_system.egg-info/: SOURCES.txt
day3_bankingsystem/src/models/: abc_banking_group.py  account.py  corporate.py  current_account.py  customer.py  direct_debit.py  external_transaction.py  individual.py  savings_account.py  transaction.py
day3_bankingsystem/src/stores/: banking_store.py
day3_bankingsystem/src/utils/: menu.py
day5/: .env  pyproject.toml
day5/Banking.egg-info/: PKG-INFO
day5/day5env/: pyvenv.cfg
day6/: pyproject.toml
day6/day6env/: pyvenv.cfg
(+34 files in other folders)
